--- a/board/templates/_navigation.html
+++ b/board/templates/_navigation.html
@@ -1,7 +1,6 @@
 <nav>
     <ul>
-      <li><a href="{{ url_for('pages.home') }}">Home</a></li>
-      <li><a href="{{ url_for('pages.about') }}">About</a></li>
       <li><a href="{{ url_for('pages.dir_listing') }}">Files</a></li>
+      <li><a class="crossed">Generate report</a></li>
     </ul>
   </nav>
