--- a/board/templates/base.html
+++ b/board/templates/base.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Message Board - {% block title %}{% endblock title %}</title>
+  <link rel="icon" href="../static/skateboarding-01.svg">
+  <title>Laod reports - {% block title %}{% endblock title %}</title>
   <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
 </head>
 <body>
-<h1>Message Board</h1>
+<h1>Отчёты нагрузочного тестирования</h1>
 {% include("_navigation.html") %}
 <section>
   <header>
