--- a/board/static/styles.css
+++ b/board/static/styles.css
@@ -8,18 +8,23 @@
     margin: 0 auto;
     text-align: center;
   }
-
-  a {
-    text-decoration: none;
-  }
   
   a,
   a:visited {
+    text-decoration: none;
     color: #007bff;
+    border-radius: 15px;
+    box-sizing: border-box;
+    will-change: transform;
+    padding: 10px 14px;
+    min-height: 30px;
   }
   
   a:hover {
     color: #0056b3;
+    box-shadow: rgba(0, 0, 0, 0.25) 0 8px 15px;
+    transform: translateY(-2px);
+    transition: all 300ms cubic-bezier(.23, 1, 0.32, 1);
   }
   
   nav ul {
@@ -46,3 +51,51 @@
   .crossed {
     text-decoration: line-through;
   }
+
+
+/* CSS */
+button {
+  appearance: none;
+  background-color: #000000;
+  border: 2px solid #1A1A1A;
+  border-radius: 15px;
+  box-sizing: border-box;
+  color: #FFFFFF;
+  cursor: pointer;
+  display: inline-block;
+  font-family: Roobert,-apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
+  font-size: 16px;
+  font-weight: 600;
+  line-height: normal;
+  margin: 0;
+  min-height: 30px;
+  min-width: 0;
+  outline: none;
+  padding: 10px 14px;
+  text-align: center;
+  text-decoration: none;
+  transition: all 300ms cubic-bezier(.23, 1, 0.32, 1);
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  width: 100%;
+  will-change: transform;
+}
+
+button:disabled {
+  pointer-events: none;
+}
+
+button:hover {
+  box-shadow: rgba(0, 0, 0, 0.25) 0 8px 15px;
+  transform: translateY(-2px);
+}
+
+button:active {
+  box-shadow: none;
+  transform: translateY(0);
+}
+
+button.unzip {
+  background-color: #165126;
+}
