--- a/board/static/styles.css
+++ b/board/static/styles.css
@@ -56,11 +56,11 @@
 /* CSS */
 button {
   appearance: none;
-  background-color: #000000;
+  background-color: #00000000;
   border: 2px solid #1A1A1A;
   border-radius: 15px;
   box-sizing: border-box;
-  color: #FFFFFF;
+  color: #000000;
   cursor: pointer;
   display: inline-block;
   font-family: Roobert,-apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
@@ -97,10 +97,18 @@ button:active {
 }
 
 button.unzip {
-  background-color: #165126;
+  border: 2px solid #4ecd6f;
+}
+
+button.delete {
+  border: 2px solid #9b2f1e;
 }
 
 table {
-  margin-left: auto;
-  margin-right: auto;
+  margin-left: 37%;
+  margin-right: 15%;
+}
+
+td.files {
+  padding: 5px 35px;
 }
